--- a/index.html
+++ b/index.html
@@ -121,10 +121,12 @@
               </div>
               
               <div class="section-detail-wrapper">
-                <h3 class="section-heading">CryptoTracker</h3>
-                <p class="section-text">A website that allows you to track your expenses in different Cryptocurrencies.</p>
+                <h3 class="section-heading">Metaverse Mayhem</h3>
+                <p class="section-text">Designed a responsive full-stack web3 application using React, Node and Solidity 
+                  allowing users to collect cards as NFTs, trade cards between players and use such 
+                  cards in a turn-based strategy game. Awarded the Judge's Choice under NUS Orbital Programme <br /> <a href="https://metaverse-mayhem.vercel.app">Try it here!</a> <br /> <a href="https://metaverse-mayhem.onrender.com/">Backend!</a></p>
                 <h3 class="section-heading">3D Thrifting Marketplace</h3>
-                <p class="section-text">A Web Application that functions as a marketplace where thrifters can sell their clothes. Buyers can visualise listings on 3D models. <br /> <a href="https://unique-froyo-b37020.netlify.app/">Try it here!</a></p>
+                <p class="section-text">A Web Application that functions as a marketplace where thrifters can sell their clothes. Buyers can visualise listings on 3D models.</p>
                 <h3 class="section-heading">Coursework</h3>
                 <p class="section-text">In addition to my personal projects, I have also tackled many different academic assignments that have broadened my perspectives on different aspects of computer science. These have given me a solid foundation in areas like software development and data structures and strengthened my problem-solving skills.</p>
     
